--- a/public/i18n/fr.i18n.json
+++ b/public/i18n/fr.i18n.json
@@ -1421,18 +1421,18 @@
   "card-show-lists-on-minicard": "Afficher les listes sur la mini-carte",
   "comprehensive-board-migration": "Migration complète de tableau",
   "comprehensive-board-migration-description": "Performs comprehensive checks and fixes for board data integrity, including list ordering, card positions, and swimlane structure.",
-  "delete-duplicate-empty-lists-migration": "Delete Duplicate Empty Lists",
+  "delete-duplicate-empty-lists-migration": "Supprimer les listes vides en doublon ? ",
   "delete-duplicate-empty-lists-migration-description": "Safely deletes empty duplicate lists. Only removes lists that have no cards AND have another list with the same title that contains cards.",
   "lost-cards": "Cartes perdues",
-  "lost-cards-list": "Restored Items",
+  "lost-cards-list": "Éléments restaurés",
   "restore-lost-cards-migration": "Restaurer les cartes perdues",
   "restore-lost-cards-migration-description": "Finds and restores cards and lists with missing swimlaneId or listId. Creates a 'Lost Cards' swimlane to make all lost items visible again.",
   "restore-all-archived-migration": "Restore All Archived",
   "restore-all-archived-migration-description": "Restores all archived swimlanes, lists, and cards. Automatically fixes any missing swimlaneId or listId to make items visible.",
   "fix-missing-lists-migration": "Fix Missing Lists",
   "fix-missing-lists-migration-description": "Detects and repairs missing or corrupted lists in the board structure.",
-  "fix-avatar-urls-migration": "Fix Avatar URLs",
-  "fix-avatar-urls-migration-description": "Updates avatar URLs for board members to use the correct storage backend and fixes broken avatar references.",
+  "fix-avatar-urls-migration": "Corriger les URLs d'avatar",
+  "fix-avatar-urls-migration-description": "Mets à jour les URLs d'avatar des participants du tableau pour utiliser le bon gestionnaire de stockage et corriger les références défaillantes d'avatar ",
   "fix-all-file-urls-migration": "Fix All File URLs",
   "fix-all-file-urls-migration-description": "Updates all file attachment URLs on this board to use the correct storage backend and fixes broken file references.",
   "migration-needed": "Migration requise",
@@ -1466,13 +1466,13 @@
   "step-convert-shared-lists": "Convert Shared Lists",
   "step-ensure-per-swimlane-lists": "Ensure Per-Swimlane Lists",
   "step-validate-migration": "Valider la migration",
-  "step-fix-avatar-urls": "Fix Avatar URLs",
+  "step-fix-avatar-urls": "Corriger les URLs d'avatar",
   "step-fix-attachment-urls": "Fix Attachment URLs",
   "step-analyze-lists": "Analyze Lists",
   "step-create-missing-lists": "Create Missing Lists",
   "step-update-cards": "Update Cards",
   "step-finalize": "Finalize",
-  "step-delete-duplicate-empty-lists": "Delete Duplicate Empty Lists",
+  "step-delete-duplicate-empty-lists": "Supprimer les listes vides en doublon ? ",
   "step-ensure-lost-cards-swimlane": "Ensure Lost Cards Swimlane",
   "step-restore-lists": "Restore Lists",
   "step-restore-cards": "Restaurer les cartes",
