--- a/public/i18n/he.i18n.json
+++ b/public/i18n/he.i18n.json
@@ -78,18 +78,18 @@
   "activity-deleteComment": "התגובה %s נמחקה",
   "activity-receivedDate": "תאריך הקבלה השתנה מ־%s ל־%s",
   "activity-startDate": "תאריך ההתחלה השתנה מ־%s ל־%s",
-  "allboards.starred": "Starred",
+  "allboards.starred": "סומן בכוכב",
   "allboards.templates": "תבניות",
-  "allboards.remaining": "Remaining",
-  "allboards.workspaces": "Workspaces",
-  "allboards.add-workspace": "Add Workspace",
-  "allboards.add-workspace-prompt": "Workspace name",
-  "allboards.add-subworkspace": "Add Subworkspace",
-  "allboards.add-subworkspace-prompt": "Subworkspace name",
-  "allboards.edit-workspace": "Edit workspace",
-  "allboards.edit-workspace-name": "Workspace name",
-  "allboards.edit-workspace-icon": "Workspace icon (markdown)",
-  "multi-selection-active": "Click checkboxes to select boards",
+  "allboards.remaining": "נותרו",
+  "allboards.workspaces": "מרחבי עבודה",
+  "allboards.add-workspace": "הוספת מרחב עבודה",
+  "allboards.add-workspace-prompt": "שם מרחב עבודה",
+  "allboards.add-subworkspace": "הוספת תת־מרחב עבודה",
+  "allboards.add-subworkspace-prompt": "שם תת־מרחב עבודה",
+  "allboards.edit-workspace": "עריכת מרחב עבודה",
+  "allboards.edit-workspace-name": "שם מרחב עבודה",
+  "allboards.edit-workspace-icon": "סמל מרחב עבודה (markdown)",
+  "multi-selection-active": "יש לסמן את התיבות כדי לבחור לוחות",
   "activity-dueDate": "תאריך היעד השתנה מ־%s ל־%s",
   "activity-endDate": "תאריך הסיום השתנה מ־%s ל־%s",
   "add-attachment": "הוספת קובץ מצורף",
@@ -398,7 +398,7 @@
   "editNotificationPopup-title": "שינוי דיווח",
   "editProfilePopup-title": "עריכת פרופיל",
   "email": "דוא״ל",
-  "email-address": "Email Address",
+  "email-address": "כתובת דוא״ל",
   "email-enrollAccount-subject": "נוצר עבורך חשבון באתר __siteName__",
   "email-enrollAccount-text": "__user__ שלום,\n\nכדי להתחיל להשתמש בשירות, יש ללחוץ על הקישור המופיע להלן.\n\n__url__\n\nתודה.",
   "email-fail": "שליחת ההודעה בדוא״ל נכשלה",
@@ -768,8 +768,8 @@
   "delete-board-confirm-popup": "כל הרשימות, הכרטיסים, התווית והפעולות יימחקו ולא תהיה לך דרך לשחזר את תכני הלוח. אין אפשרות לבטל.",
   "boardDeletePopup-title": "למחוק את הלוח?",
   "delete-board": "מחיקת לוח",
-  "delete-duplicate-lists": "Delete Duplicate Lists",
-  "delete-duplicate-lists-confirm": "Are you sure? This will delete all duplicate lists that have the same name and contain no cards.",
+  "delete-duplicate-lists": "מחיקת רשימות כפולות",
+  "delete-duplicate-lists-confirm": "להמשיך? הפעולה הזאת תמחק את כל הרשימות הכפולות שיש להן את אותו השם ואינן מכילות כרטיסים.",
   "default-subtasks-board": "תת־משימות עבור הלוח __board__",
   "default": "בררת מחדל",
   "defaultdefault": "בררת מחדל",
@@ -1417,15 +1417,15 @@
   "back-to-settings": "חזרה להגדרות",
   "board-id": "מזהה לוח",
   "board-migration": "הסבת לוחות",
-  "board-migrations": "Board Migrations",
+  "board-migrations": "הסבות לוחות",
   "card-show-lists-on-minicard": "הצגת רשימות בכרטיסון",
-  "comprehensive-board-migration": "Comprehensive Board Migration",
+  "comprehensive-board-migration": "הסבת לוחות נרחבת",
   "comprehensive-board-migration-description": "Performs comprehensive checks and fixes for board data integrity, including list ordering, card positions, and swimlane structure.",
   "delete-duplicate-empty-lists-migration": "Delete Duplicate Empty Lists",
   "delete-duplicate-empty-lists-migration-description": "Safely deletes empty duplicate lists. Only removes lists that have no cards AND have another list with the same title that contains cards.",
-  "lost-cards": "Lost Cards",
-  "lost-cards-list": "Restored Items",
-  "restore-lost-cards-migration": "Restore Lost Cards",
+  "lost-cards": "כרטיסים אבודים",
+  "lost-cards-list": "פריטים משוחזרים",
+  "restore-lost-cards-migration": "שחזור כרטיסים אבודים",
   "restore-lost-cards-migration-description": "Finds and restores cards and lists with missing swimlaneId or listId. Creates a 'Lost Cards' swimlane to make all lost items visible again.",
   "restore-all-archived-migration": "Restore All Archived",
   "restore-all-archived-migration-description": "Restores all archived swimlanes, lists, and cards. Automatically fixes any missing swimlaneId or listId to make items visible.",
@@ -1439,8 +1439,8 @@
   "migration-complete": "הושלם",
   "migration-running": "Running...",
   "migration-successful": "Migration completed successfully",
-  "migration-failed": "Migration failed",
-  "migrations": "Migrations",
+  "migration-failed": "ההסבה נכשלה",
+  "migrations": "הסבות",
   "migrations-admin-only": "Only board administrators can run migrations",
   "migrations-description": "Run data integrity checks and repairs for this board. Each migration can be executed individually.",
   "no-issues-found": "No issues found",
