--- a/public/i18n/sv.i18n.json
+++ b/public/i18n/sv.i18n.json
@@ -1417,85 +1417,85 @@
   "back-to-settings": "Tillbaka till inställningar",
   "board-id": "Tavlans ID",
   "board-migration": "Tavelmigration",
-  "board-migrations": "Board Migrations",
-  "card-show-lists-on-minicard": "Show Lists on Minicard",
-  "comprehensive-board-migration": "Comprehensive Board Migration",
-  "comprehensive-board-migration-description": "Performs comprehensive checks and fixes for board data integrity, including list ordering, card positions, and swimlane structure.",
-  "delete-duplicate-empty-lists-migration": "Delete Duplicate Empty Lists",
-  "delete-duplicate-empty-lists-migration-description": "Safely deletes empty duplicate lists. Only removes lists that have no cards AND have another list with the same title that contains cards.",
-  "lost-cards": "Lost Cards",
-  "lost-cards-list": "Restored Items",
-  "restore-lost-cards-migration": "Restore Lost Cards",
-  "restore-lost-cards-migration-description": "Finds and restores cards and lists with missing swimlaneId or listId. Creates a 'Lost Cards' swimlane to make all lost items visible again.",
-  "restore-all-archived-migration": "Restore All Archived",
-  "restore-all-archived-migration-description": "Restores all archived swimlanes, lists, and cards. Automatically fixes any missing swimlaneId or listId to make items visible.",
-  "fix-missing-lists-migration": "Fix Missing Lists",
-  "fix-missing-lists-migration-description": "Detects and repairs missing or corrupted lists in the board structure.",
-  "fix-avatar-urls-migration": "Fix Avatar URLs",
-  "fix-avatar-urls-migration-description": "Updates avatar URLs for board members to use the correct storage backend and fixes broken avatar references.",
-  "fix-all-file-urls-migration": "Fix All File URLs",
-  "fix-all-file-urls-migration-description": "Updates all file attachment URLs on this board to use the correct storage backend and fixes broken file references.",
-  "migration-needed": "Migration Needed",
-  "migration-complete": "Complete",
-  "migration-running": "Running...",
-  "migration-successful": "Migration completed successfully",
-  "migration-failed": "Migration failed",
-  "migrations": "Migrations",
-  "migrations-admin-only": "Only board administrators can run migrations",
-  "migrations-description": "Run data integrity checks and repairs for this board. Each migration can be executed individually.",
-  "no-issues-found": "No issues found",
-  "run-migration": "Run Migration",
-  "run-comprehensive-migration-confirm": "This will perform a comprehensive migration to check and fix board data integrity. This may take a few moments. Continue?",
-  "run-delete-duplicate-empty-lists-migration-confirm": "This will first convert any shared lists to per-swimlane lists, then delete empty lists that have a duplicate list with the same title containing cards. Only truly redundant empty lists will be removed. Continue?",
-  "run-restore-lost-cards-migration-confirm": "This will create a 'Lost Cards' swimlane and restore all cards and lists with missing swimlaneId or listId. This only affects non-archived items. Continue?",
-  "run-restore-all-archived-migration-confirm": "This will restore ALL archived swimlanes, lists, and cards, making them visible again. Any items with missing IDs will be automatically fixed. This cannot be easily undone. Continue?",
-  "run-fix-missing-lists-migration-confirm": "This will detect and repair missing or corrupted lists in the board structure. Continue?",
-  "run-fix-avatar-urls-migration-confirm": "This will update avatar URLs for board members to use the correct storage backend. Continue?",
-  "run-fix-all-file-urls-migration-confirm": "This will update all file attachment URLs on this board to use the correct storage backend. Continue?",
-  "restore-lost-cards-nothing-to-restore": "No lost swimlanes, lists, or cards to restore",
+  "board-migrations": "Migrering av tavlor",
+  "card-show-lists-on-minicard": "Visa listor på minikort",
+  "comprehensive-board-migration": "Fullständig migration av alla tavlor ",
+  "comprehensive-board-migration-description": "Utför omfattande kontroller och korrigeringar för tavlans dataintegritet, inklusive listordning, kortpositioner och swimlane-struktur.",
+  "delete-duplicate-empty-lists-migration": "Ta bort duplicerade tomma listor",
+  "delete-duplicate-empty-lists-migration-description": "Tar säkert bort tomma duplicerade listor. Tar endast bort listor som inte har några kort OCH där det finns en annan lista med samma titel som innehåller kort.",
+  "lost-cards": "Förlorade kort ",
+  "lost-cards-list": "Återställda objekt",
+  "restore-lost-cards-migration": "Återställ förlorade kort",
+  "restore-lost-cards-migration-description": "Hittar och återställer kort och listor som saknar simbaneid eller listId. Skapar en 'Förlorade kort'-simbana för att göra alla förlorade objekt synliga igen.",
+  "restore-all-archived-migration": "Återställ från Arkiv",
+  "restore-all-archived-migration-description": "Återställer alla arkiverade swimlanes, listor och kort. Korrigerar automatiskt alla saknade simbaneId eller listId för att göra objekt synliga.",
+  "fix-missing-lists-migration": "Fixa saknade listor",
+  "fix-missing-lists-migration-description": "Upptäcker och reparerar saknade eller korrupta listor i tavlans struktur.",
+  "fix-avatar-urls-migration": "Fixa avatar-URL:er",
+  "fix-avatar-urls-migration-description": "Uppdaterar avatar-URL:er för tavlans medlemmar till att använda rätt lagrings-backend och fixar trasiga avatar-referenser.",
+  "fix-all-file-urls-migration": "Fixa alla fil-URL:er",
+  "fix-all-file-urls-migration-description": "Uppdaterar alla URL:er för filbilagor på denna tavla till att använda rätt lagrings-backend och fixar trasiga filreferenser.",
+  "migration-needed": "Migrering krävs",
+  "migration-complete": "Avslutad",
+  "migration-running": "Körs...",
+  "migration-successful": "Migrering slutförd",
+  "migration-failed": "Migrering misslyckades",
+  "migrations": "Migreringar",
+  "migrations-admin-only": "Endast tavlans administratörer kan köra migreringar",
+  "migrations-description": "Kör dataintegritetskontroller och reparationer för denna tavla. Varje migrering kan utföras individuellt.",
+  "no-issues-found": "Inga problem hittades",
+  "run-migration": "Kör migrering",
+  "run-comprehensive-migration-confirm": "Detta kommer att utföra en omfattande migrering för att kontrollera och fixa tavlans dataintegritet. Detta kan ta en liten stund. Fortsätt?",
+  "run-delete-duplicate-empty-lists-migration-confirm": "Detta kommer först att konvertera alla delade listor till listor per simbana, och sedan ta bort tomma listor som har en dubblettlista med samma titel som innehåller kort. Endast överflödiga tomma listor kommer att tas bort. Fortsätt?",
+  "run-restore-lost-cards-migration-confirm": "Detta kommer att skapa en 'Förlorade kort'-simbana och återställa alla kort och listor som saknar simbaneId eller listId. Detta påverkar endast icke-arkiverade objekt. Fortsätt?",
+  "run-restore-all-archived-migration-confirm": "Detta kommer att återställa ALLA arkiverade simbanor, listor och kort, vilket gör dem synliga igen. Alla objekt med saknade ID:n kommer att fixas automatiskt. Detta kan inte enkelt ångras. Fortsätt?",
+  "run-fix-missing-lists-migration-confirm": "Detta kommer att upptäcka och reparera saknade eller korrupta listor i tavlans struktur. Fortsätt?",
+  "run-fix-avatar-urls-migration-confirm": "Detta kommer att uppdatera avatar-URL:er för tavlans medlemmar till att använda rätt lagrings-backend. Fortsätt?",
+  "run-fix-all-file-urls-migration-confirm": "Detta kommer att uppdatera alla URL:er för filbilagor på denna tavla till att använda rätt lagrings-backend. Fortsätt?",
+  "restore-lost-cards-nothing-to-restore": "Inga förlorade simbanor, listor eller kort att återställa",
   
-  "migration-progress-title": "Board Migration in Progress",
-  "migration-progress-overall": "Overall Progress",
-  "migration-progress-current-step": "Current Step",
+  "migration-progress-title": "Tavlans migrering pågår",
+  "migration-progress-overall": "Övergripande förlopp",
+  "migration-progress-current-step": "Nuvarande steg",
   "migration-progress-status": "Status",
   "migration-progress-details": "Detaljer",
-  "migration-progress-note": "Please wait while we migrate your board to the latest structure...",
+  "migration-progress-note": "Vänta medan vi migrerar din tavla till den senaste strukturen...",
   
-  "step-analyze-board-structure": "Analyze Board Structure",
-  "step-fix-orphaned-cards": "Fix Orphaned Cards",
-  "step-convert-shared-lists": "Convert Shared Lists",
-  "step-ensure-per-swimlane-lists": "Ensure Per-Swimlane Lists",
-  "step-validate-migration": "Validate Migration",
-  "step-fix-avatar-urls": "Fix Avatar URLs",
-  "step-fix-attachment-urls": "Fix Attachment URLs",
-  "step-analyze-lists": "Analyze Lists",
+  "step-analyze-board-structure": "Analysera tavlans struktur",
+  "step-fix-orphaned-cards": "Fixa övergivna kort",
+  "step-convert-shared-lists": "Konvertera delade listor",
+  "step-ensure-per-swimlane-lists": "Säkerställ listor per simbana",
+  "step-validate-migration": "Validera migrering",
+  "step-fix-avatar-urls": "Fixa avatar-URL:er",
+  "step-fix-attachment-urls": "Fixa bilage-URL:er",
+  "step-analyze-lists": "Analysera listor",
   "step-create-missing-lists": "Create Missing Lists",
-  "step-update-cards": "Update Cards",
-  "step-finalize": "Finalize",
-  "step-delete-duplicate-empty-lists": "Delete Duplicate Empty Lists",
-  "step-ensure-lost-cards-swimlane": "Ensure Lost Cards Swimlane",
-  "step-restore-lists": "Restore Lists",
-  "step-restore-cards": "Restore Cards",
-  "step-restore-swimlanes": "Restore Swimlanes",
-  "step-fix-missing-ids": "Fix Missing IDs",
-  "step-scan-users": "Checking board member avatars",
-  "step-scan-files": "Checking board file attachments",
-  "step-fix-file-urls": "Fixing file URLs",
-  "cleanup": "Cleanup",
-  "cleanup-old-jobs": "Cleanup Old Jobs",
+  "step-update-cards": "Uppdatera kort",
+  "step-finalize": "Slutför",
+  "step-delete-duplicate-empty-lists": "Ta bort duplicerade tomma listor",
+  "step-ensure-lost-cards-swimlane": "Säkerställ simbana för förlorade kort",
+  "step-restore-lists": "Återställ listor",
+  "step-restore-cards": "Återställ kort",
+  "step-restore-swimlanes": "Återställ simbanor",
+  "step-fix-missing-ids": "Fixa saknade ID:n",
+  "step-scan-users": "Kontrollerar tavlans medlemsavatarer",
+  "step-scan-files": "Kontrollerar tavlans filbilagor",
+  "step-fix-file-urls": "Fixar fil-URL:er",
+  "cleanup": "Rensning",
+  "cleanup-old-jobs": "Rensa gamla jobb",
   "completed": "Avslutad",
-  "conversion-info-text": "This conversion is performed once per board and improves performance. You can continue using the board normally.",
-  "converting-board": "Converting Board",
-  "converting-board-description": "Converting board structure for improved functionality. This may take a few moments.",
-  "cpu-cores": "CPU Cores",
-  "cpu-usage": "CPU Usage",
-  "current-action": "Current Action",
-  "database-migration": "Database Migration",
-  "database-migration-description": "Updating database structure for improved functionality and performance. This process may take several minutes.",
-  "database-migrations": "Database Migrations",
-  "days-old": "Days Old",
-  "duration": "Duration",
-  "errors": "Errors",
+  "conversion-info-text": "Denna konvertering utförs en gång per tavla och förbättrar prestandan. Ni kan fortsätta använda tavlan som vanligt.",
+  "converting-board": "Konverterar tavla",
+  "converting-board-description": "Konverterar tavlans struktur för förbättrad funktionalitet. Detta kan ta en liten stund.",
+  "cpu-cores": "CPU-kärnor",
+  "cpu-usage": "CPU-användning",
+  "current-action": "Nuvarande åtgärd",
+  "database-migration": "Databas­migrering",
+  "database-migration-description": "Uppdaterar databasstrukturen för förbättrad funktionalitet och prestanda. Denna process kan ta flera minuter.",
+  "database-migrations": "Databas­migreringar",
+  "days-old": "Dagar gammal",
+  "duration": "Varaktighet",
+  "errors": "Fel",
   "estimated-time-remaining": "Beräknad återstående tid",
   "every-1-day": "Var 1 dag",
   "every-1-hour": "Var 1 timme",
@@ -1504,76 +1504,76 @@
   "every-30-minutes": "Var 30 minuter",
   "every-5-minutes": "Var 5 minuter",
   "every-6-hours": "Var 6 timmar",
-  "export-monitoring": "Export Monitoring",
-  "filesystem-attachments": "Filesystem Attachments",
-  "filesystem-size": "Filesystem Size",
-  "filesystem-storage": "Filesystem Storage",
-  "force-board-scan": "Force Board Scan",
-  "gridfs-attachments": "GridFS Attachments",
-  "gridfs-size": "GridFS Size",
+  "export-monitoring": "Exportövervakning",
+  "filesystem-attachments": "Filssystem-bilagor",
+  "filesystem-size": "Filssystemstorlek",
+  "filesystem-storage": "Filssystemlagring",
+  "force-board-scan": "Tvinga tavelskanning",
+  "gridfs-attachments": "GridFS-bilagor",
+  "gridfs-size": "GridFS-storlek",
   "gridfs-storage": "GridFS",
-  "hide-list-on-minicard": "Hide List on Minicard",
-  "idle-migration": "Idle Migration",
-  "job-description": "Job Description",
-  "job-details": "Job Details",
-  "job-name": "Job Name",
-  "job-queue": "Job Queue",
-  "last-run": "Last Run",
-  "max-concurrent": "Max Concurrent",
-  "memory-usage": "Memory Usage",
-  "migrate-all-to-filesystem": "Migrate All to Filesystem",
-  "migrate-all-to-gridfs": "Migrate All to GridFS",
-  "migrate-all-to-s3": "Migrate All to S3",
-  "migrated-attachments": "Migrated Attachments",
-  "migration-batch-size": "Batch Size",
-  "migration-batch-size-description": "Number of attachments to process in each batch (1-100)",
-  "migration-cpu-threshold": "CPU Threshold (%)",
-  "migration-cpu-threshold-description": "Pause migration when CPU usage exceeds this percentage (10-90)",
-  "migration-delay-ms": "Delay (ms)",
-  "migration-delay-ms-description": "Delay between batches in milliseconds (100-10000)",
-  "migration-detector": "Migration Detector",
-  "migration-info-text": "Database migrations are performed once and improve system performance. The process continues in the background even if you close your browser.",
-  "migration-log": "Migration Log",
-  "migration-markers": "Migration Markers",
-  "migration-resume-failed": "Failed to resume migration",
-  "migration-resumed": "Migration resumed",
-  "migration-steps": "Migration Steps",
-  "migration-warning-text": "Please do not close your browser during migration. The process will continue in the background but may take longer to complete.",
-  "monitoring-export-failed": "Failed to export monitoring data",
-  "monitoring-refresh-failed": "Failed to refresh monitoring data",
-  "next": "Next",
-  "next-run": "Next Run",
+  "hide-list-on-minicard": "Göm lista på minikort",
+  "idle-migration": "Inaktiv migrering",
+  "job-description": "Jobbeskrivning",
+  "job-details": "Jobbdetaljer",
+  "job-name": "Jobbnamn",
+  "job-queue": "Jobbkö",
+  "last-run": "Senaste körning",
+  "max-concurrent": "Max samtidigt",
+  "memory-usage": "Minnesanvändning",
+  "migrate-all-to-filesystem": "Migrera allt till filsystem",
+  "migrate-all-to-gridfs": "Migrera allt till GridFS",
+  "migrate-all-to-s3": "Migrera allt till S3",
+  "migrated-attachments": "Migrerade bilagor",
+  "migration-batch-size": "Batchstorlek",
+  "migration-batch-size-description": "Antal bilagor att bearbeta i varje batch (1-100)",
+  "migration-cpu-threshold": "CPU-tröskel (%)",
+  "migration-cpu-threshold-description": "Pausa migreringen när CPU-användningen överstiger denna procentsats (10-90)",
+  "migration-delay-ms": "Fördröjning (ms)",
+  "migration-delay-ms-description": "Fördröjning mellan batchar i millisekunder (100-10000)",
+  "migration-detector": "Migreringsdetektor",
+  "migration-info-text": "Databas­migreringar utförs en gång och förbättrar systemets prestanda. Processen fortsätter i bakgrunden även om du stänger din webbläsare.",
+  "migration-log": "Migreringslogg",
+  "migration-markers": "Migreringsmarkörer",
+  "migration-resume-failed": "Misslyckades med att återuppta migrering",
+  "migration-resumed": "Migrering återupptogs",
+  "migration-steps": "Migreringssteg",
+  "migration-warning-text": "Vänligen stäng inte din webbläsare under migreringen. Processen fortsätter i bakgrunden men kan ta längre tid att slutföra.",
+  "monitoring-export-failed": "Misslyckades med att exportera övervakningsdata",
+  "monitoring-refresh-failed": "Misslyckades med att uppdatera övervakningsdata",
+  "next": "Nästa",
+  "next-run": "Nästa körning",
   "of": "av",
-  "operation-type": "Operation Type",
-  "overall-progress": "Overall Progress",
-  "page": "Page",
-  "pause-migration": "Pause Migration",
-  "previous": "Previous",
-  "refresh": "Refresh",
-  "refresh-monitoring": "Refresh Monitoring",
-  "remaining-attachments": "Remaining Attachments",
-  "resume-migration": "Resume Migration",
-  "run-once": "Run once",
-  "s3-attachments": "S3 Attachments",
-  "s3-size": "S3 Size",
+  "operation-type": "Operationstyp",
+  "overall-progress": "Övergripande förlopp",
+  "page": "Sida",
+  "pause-migration": "Pausa migrering",
+  "previous": "Föregående",
+  "refresh": "Uppdatera",
+  "refresh-monitoring": "Uppdatera övervakning",
+  "remaining-attachments": "Återstående bilagor",
+  "resume-migration": "Återuppta migrering",
+  "run-once": "Kör en gång",
+  "s3-attachments": "S3-bilagor",
+  "s3-size": "S3-storlek",
   "s3-storage": "S3",
-  "scanning-status": "Scanning Status",
-  "schedule": "Schedule",
-  "search-boards-or-operations": "Search boards or operations...",
-  "show-list-on-minicard": "Show List on Minicard",
-  "showing": "Showing",
-  "start-test-operation": "Start Test Operation",
-  "start-time": "Start Time",
-  "step-progress": "Step Progress",
-  "stop-migration": "Stop Migration",
-  "storage-distribution": "Storage Distribution",
-  "system-resources": "System Resources",
-  "total-attachments": "Total Attachments",
-  "total-operations": "Total Operations",
-  "total-size": "Total Size",
-  "unmigrated-boards": "Unmigrated Boards",
-  "weight": "Weight",
-  "idle": "Idle",
-  "complete": "Complete",
+  "scanning-status": "Skanningsstatus",
+  "schedule": "Schema",
+  "search-boards-or-operations": "Sök tavlor eller operationer...",
+  "show-list-on-minicard": "Visa lista på minikort",
+  "showing": "Visar",
+  "start-test-operation": "Starta testoperation",
+  "start-time": "Starttid",
+  "step-progress": "Stegförlopp",
+  "stop-migration": "Stoppa migrering",
+  "storage-distribution": "Lagringsdistribution",
+  "system-resources": "Systemresurser",
+  "total-attachments": "Totala bilagor",
+  "total-operations": "Totala operationer",
+  "total-size": "Total storlek",
+  "unmigrated-boards": "Okonverterade tavlor",
+  "weight": "Vikt",
+  "idle": "Inaktiv",
+  "complete": "Avslutad",
   "cron": "Cron"
 }
